--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ mysqlConnectorJava = "8.0.32"
 mysqlConnectorJavaVersion = "8.0.33"
 navigationFragment = "2.8.1"
 navigationUi = "2.8.1"
+ojdbc8 = "19.3.0.0"
 preference = "1.2.0"
 roundedimageview = "2.3.0"
 sdpAndroid = "1.0.6"
@@ -32,6 +33,7 @@ mysql-connector-java = { module = "mysql:mysql-connector-java", version.ref = "m
 mysql-connector-java-v8033 = { module = "mysql:mysql-connector-java", version.ref = "mysqlConnectorJavaVersion" }
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
+ojdbc8 = { module = "com.oracle.ojdbc:ojdbc8", version.ref = "ojdbc8" }
 preference = { group = "androidx.preference", name = "preference", version.ref = "preference" }
 roundedimageview = { module = "com.makeramen:roundedimageview", version.ref = "roundedimageview" }
 sdp-android = { module = "com.intuit.sdp:sdp-android", version.ref = "sdpAndroid" }
