--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         tools:targetApi="31"
         android:networkSecurityConfig="@xml/network_security_config">
 
-        <activity android:name=".ui.signUpLogIn.LogIn"
+        <activity android:name=".ui.signUpLogIn.SplashScreen"
             android:exported="true"
             android:windowSoftInputMode="adjustResize">
 
@@ -43,6 +43,7 @@
 
         <activity android:name=".ui.signUpLogIn.SignUp"
             android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".ui.signUpLogIn.LogIn"/>
 
         <activity android:name=".MainActivity"/>
     </application>
