--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,13 @@
         android:theme="@style/Theme.StudyGo"
         tools:targetApi="31"
         android:networkSecurityConfig="@xml/network_security_config">
-
+        <service
+            android:name=".firebase.MessagingService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
         <activity android:name=".ui.signUpLogIn.SplashScreen"
             android:exported="true"
             android:windowSoftInputMode="adjustResize">
