--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,15 @@
         android:theme="@style/Theme.StudyGo"
         tools:targetApi="31"
         android:networkSecurityConfig="@xml/network_security_config">
-        <activity android:name=".ui.signUpLogIn.LogIn"/>
-        <activity android:name=".ui.signUpLogIn.SplashScreen"
+        <service
+            android:name=".firebase.MessagingService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+        <activity android:name=".activities.LogIn"/>
+        <activity android:name=".activities.SplashScreen"
             android:exported="true"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
@@ -31,17 +38,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.signUpLogIn.SignUp"
+        <activity android:name=".activities.SignUp"
             android:windowSoftInputMode="adjustResize"/>
 
-        <activity android:name=".MainActivity"/>
-        <service
-            android:name=".firebase.MessagingService"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-            </intent-filter>
-        </service>
+        <activity android:name=".activities.MainActivity"/>
+
     </application>
 
 </manifest>
