--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,9 @@
         <activity android:name=".activities.SignUp"
             android:windowSoftInputMode="adjustResize"/>
 
-        <activity android:name=".activities.MainActivity"/>
+        <activity android:name=".activities.ActivityStudent"/>
+        <activity android:name="com.example.studygo.activities.ActivityTeacher" />
+        <activity android:name="com.example.studygo.activities.ui.settings.SettingsActivity" />
 
     </application>
 
