--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
 
         <activity android:name=".activities.ActivityStudent"/>
         <activity android:name="com.example.studygo.activities.ActivityTeacher" />
-        <activity android:name="com.example.studygo.activities.ui.settings.SettingsActivity" />
+        <activity android:name="com.example.studygo.activities.ui.settings.PreferenceActivity" />
 
     </application>
 
