--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity
             android:name="com.example.studygo.activities.ui.messages.MessagesFragment"
             android:windowSoftInputMode="adjustResize" />
+        <activity android:name="com.example.studygo.activities.ui.dashboard.EventSelector" />
 
     </application>
 
