--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -53,6 +54,7 @@
             android:windowSoftInputMode="adjustResize" />
         <activity android:name="com.example.studygo.activities.ui.dashboard.EventSelector" />
         <activity android:name="com.example.studygo.activities.ActivityCompany" />
+        <activity android:name="com.example.studygo.activities.ui.dashboard.AdSelector" />
 
     </application>
 
