--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
         <activity android:name="com.example.studygo.activities.ActivityCompany" />
         <activity android:name="com.example.studygo.activities.ui.dashboard.AdSelector" />
         <activity android:name="com.example.studygo.activities.ActivityRequests" />
-        <activity android:name="com.example.studygo.activities.ActivityFriends" />
+        <activity android:name="com.example.studygo.activities.ui.friends.ActivityFriends" />
         <activity android:name="com.example.studygo.activities.ActivityAddFriend" />
 
     </application>
