--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
         <activity android:name="com.example.studygo.activities.ActivityRequests" />
         <activity android:name="com.example.studygo.activities.ui.friends.ActivityFriends" />
         <activity android:name="com.example.studygo.activities.ActivityAddFriend" />
+        <activity android:name="com.example.studygo.activities.ui.messages.GroupMessagesFragment" />
 
     </application>
 
