added new lib dependencies, users now have online status

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
         <activity android:name="com.example.studygo.activities.ActivityAddFriend" />
         <activity android:name="com.example.studygo.activities.ui.messages.GroupMessagesFragment" />
         <activity android:name="com.example.studygo.activities.ActivitySelectClass" />
+        <activity android:name="com.example.studygo.activities.BaseActivity" />
 
     </application>
 
